Implement map registry
